# Worms

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  client_test.sh  documentacion_tecnica.md  hello_world.cpp  hello_world.sh  installer.sh  manual_de_proyecto.md  manual_de_usuario.md
client/: client_client.cpp  client_client.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_sender.cpp
common/: common_queue.h  common_socket.cpp  common_socket.h  common_thread.h
configuration/: configuration.cpp  configuration.h  configuration.yaml  weapon_info.cpp  weapon_info.h
scenarios/: scenarios.yaml
server/: server_clienthandler.h  server_lobby.cpp  server_protocol.cpp  server_sender.h  server_server.cpp
src/client/: client_client.cpp  client_client.h  client_constants.h  client_event_handler.cpp  client_event_handler.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h
src/client/commands/: change_countdown.cpp  change_countdown.h  change_weapon.cpp  change_weapon.h  client_aim.cpp  client_aim.h  client_command.cpp  client_command.h  client_fire.cpp  client_fire.h  client_jump.cpp  client_jump.h  client_move.cpp  client_move.h  client_power_attack.cpp  client_power_attack.h  client_rollback.cpp  client_rollback.h  client_stop_aim.cpp  client_stop_aim.h  client_stop_moving.cpp  client_stop_moving.h
src/client/game/: aim_info.cpp  aim_info.h  beam.cpp  beam.h  entity_info.cpp  entity_info.h  estado_juego.cpp  estado_juego.h  explosion.cpp  explosion.h  ground.cpp  ground.h  projectile.cpp  projectile.h  provision.cpp  provision.h  proyectil.cpp  proyectil.h  scenario.cpp  scenario.h  worm.cpp  worm.h
src/client/graphics/: animation.cpp  animation.h  camera.cpp  camera.h  crosshair.cpp  crosshair.h  debug_entity.cpp  debug_entity.h  entities_factory.cpp  entities_factory.h  entity.cpp  entity.h  explosion_entity.cpp  explosion_entity.h  ground_entity.cpp  ground_entity.h  hud.cpp  hud.h  player.cpp  player.h  projectile_controller.cpp  projectile_controller.h  projectile_entity.cpp  projectile_entity.h  provision_entity.cpp  provision_entity.h  proyectil_entity.cpp  proyectil_entity.h  scenario_beam.cpp  scenario_beam.h  textureController.cpp  textureController.h  texture_controller.cpp  texture_controller.h  wind.cpp  wind.h  worldview.cpp  worldview.h
src/client/graphics/weapons/: airstrike.cpp  airstrike.h  banana.cpp  banana.h  baseball_bat.cpp  baseball_bat.h  bazooka.cpp  bazooka.h  dynamite.cpp  dynamite.h  green_grenade.cpp  green_grenade.h  holy_grenade.cpp  holy_grenade.h  mortar.cpp  mortar.h  red_grenade.cpp  red_grenade.h  teleportation.cpp  teleportation.h  weapon.cpp  weapon.h  weapon_factory.cpp  weapon_factory.h  weapon_selector.cpp  weapon_selector.h
src/client/lobby/: connectdialog.cpp  connectdialog.h  connectdialog.ui  gameinfo.cpp  gameinfo.h  gameinfo_view.cpp  gameinfo_view.h  join_game_dialog.cpp  join_game_dialog.h  join_game_dialog.ui  lobby_state.cpp  lobby_state.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_game_dialog.cpp  new_game_dialog.h  new_game_dialog.ui  resources.qrc
src/client/sound/: sound_controller.cpp  sound_controller.h
src/common/: common_baseprotocol.cpp  common_baseprotocol.h  common_baseprotocol_mock.cpp  common_baseprotocol_mock.h  common_baseprotocol_socket.cpp  common_baseprotocol_socket.h  common_log.cpp  common_log.h  common_protocol_constants.h  common_queue.h  common_weapon_constants.h
src/server/: scenario_filehandler.cpp  scenario_filehandler.h  server_accepter.cpp  server_accepter.h  server_client.cpp  server_client.h  server_clienthandler.cpp  server_clienthandler.h  server_clientstate.cpp  server_clientstate.h  server_error.h  server_game.cpp  server_game.h  server_game_reaper.cpp  server_game_reaper.h  server_lobby.cpp  server_lobby.h  server_lobby_answer.cpp  server_lobby_answer.h  server_lobby_request.cpp  server_lobby_request.h  server_main.cpp  server_protocol.cpp  server_protocol.h  server_protocol_constants.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h  server_server.cpp  server_server.h
src/server/client_states/: server_clientstate.cpp  server_clientstate.h  server_clientstate_game.cpp  server_clientstate_game.h  server_clientstate_lobby.cpp  server_clientstate_lobby.h
src/server/game/: server_beam.cpp  server_beam.h  server_clientstate_game.cpp  server_clientstate_game.h  server_event_handler.cpp  server_event_handler.h  server_game.cpp  server_game.h  server_gameevent.cpp  server_gameevent.h  server_gameinfo.cpp  server_gameinfo.h  server_gamestatus.cpp  server_gamestatus.h  server_gameworld.cpp  server_gameworld.h  server_inputs.h  server_move.h  server_scenario_file_handler.cpp  server_scenario_file_handler.h  server_sender.cpp  server_sender.h  server_statusbroadcast_monitor.cpp  server_statusbroadcast_monitor.h  server_worm.h  server_worm_info.h
src/server/game/entities/: server_beam.cpp  server_beam.h  server_beam_info.cpp  server_beam_info.h  server_boundary.cpp  server_boundary.h  server_explosion.cpp  server_explosion.h  server_explosion_info.cpp  server_explosion_info.h  server_gameobject.cpp  server_gameobject.h  server_gameobject_info.cpp  server_gameobject_info.h  server_ground.cpp  server_ground.h  server_ground_info.cpp  server_ground_info.h  server_onfloor_contactlistener.cpp  server_onfloor_contactlistener.h  server_worm.cpp  server_worm.h  server_worm_collision_manager.cpp  server_worm_collision_manager.h  server_worm_info.cpp  server_worm_info.h  server_worm_sensor.cpp  server_worm_sensor.h  server_worm_sensor_info.cpp  server_worm_sensor_info.h
src/server/game/listeners/: server_contact_listener.cpp  server_contact_listener.h  (+10 more)
src/server/lobby/: server_clientstate_lobby.cpp  server_clientstate_lobby.h  server_lobby.cpp  server_lobby.h  server_lobby_answer.cpp  server_lobby_answer.h  server_lobby_request.cpp  server_lobby_request.h  server_lobby_response.cpp  server_lobby_response.h
test/: client_test.cc  hello_test.cc
(+115 files in other folders)
